Improving error message
Aligning to DOS

--- a/frameworks/g-cloud-8/questions/declaration/tradingStatusOther.yml
+++ b/frameworks/g-cloud-8/questions/declaration/tradingStatusOther.yml
@@ -6,4 +6,4 @@ validations:
     message: You need to answer this question because you answered ‘other’ to [[tradingStatus]].
   -
     name: under_character_limit
-    message: "Maximum 5000 characters."
+    message: "Your answer must be no more than than 5000 characters."
