--- a/frameworks/g-cloud-8/questions/declaration/appropriateTradeRegistersNumber.yml
+++ b/frameworks/g-cloud-8/questions/declaration/appropriateTradeRegistersNumber.yml
@@ -4,4 +4,4 @@ validations:
   - name: answer_required
     message: You need to answer this question because you answered ‘yes’ to [[appropriateTradeRegisters]].
   - name: under_character_limit
-    message: "Maximum 5000 characters."
+    message: "Your answer must be no more than than 5000 characters."
