Add 8 to G-Cloud
consistency

--- a/frameworks/g-cloud-8/questions/declaration/subcontracting.yml
+++ b/frameworks/g-cloud-8/questions/declaration/subcontracting.yml
@@ -1,4 +1,4 @@
-question: "Please confirm whether you will provide G-Cloud services:"
+question: "Please confirm whether you will provide G-Cloud 8 services:"
 type: checkboxes
 options:
   - label: yourself without the use of third parties (subcontractors)
