guidance used to say 'do not'' now says 'don’t'

--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/researchDates.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/researchDates.yml
@@ -1,6 +1,6 @@
 name: Research dates
 question: Research dates
-question_advice: If you do not have exact dates, say when you expect research to start and end.
+question_advice: If you don’t have exact dates, say when you expect research to start and end.
 type: text
 depends:
   - "on": "lot"
