content update - removed 'the'

--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/evaluationTypeOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/evaluationTypeOutcomes.yml
@@ -1,6 +1,6 @@
 name: Assessment methods
 id: evaluationType
-question: How you’ll assess the suppliers
+question: How you’ll assess suppliers
 question_advice: |
   Choose how you want to assess suppliers.
   
