--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/evaluationTypeSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/evaluationTypeSpecialists.yml
@@ -1,6 +1,6 @@
 name: Assessment methods
 id: evaluationType
-question: How you’ll assess the specialists
+question: How you’ll assess specialists
 question_advice: |
   Choose how you want to assess specialists.
   
