--- a/frameworks/g-cloud-8/messages/dates.yml
+++ b/frameworks/g-cloud-8/messages/dates.yml
@@ -1,14 +1,14 @@
 clarifications_close_date: |
-  5pm BST, 31 February 3021 (CHANGE THIS)
+  5pm BST, 7 June 2016
 
   *[BST]: British Summer Time
 clarifications_publish_date: |
-  5pm BST, 31 February 3021 (CHANGE THIS)
+  5pm BST, 14 June 2016
 
   *[BST]: British Summer Time
 framework_close_date: |
-  3pm BST, 31 February 3021 (CHANGE THIS)
+  5pm BST, 21 June 2016
 
   *[BST]: British Summer Time
-intention_to_award_date: '31 February 3021 (CHANGE THIS)'
-framework_live_date: '31 February 3021 (CHANGE THIS)'
+intention_to_award_date: '18 July 2016'
+framework_live_date: '1 August 2016'
