--- a/frameworks/g-cloud-8/questions/services/dataProtectionBetweenServices.yml
+++ b/frameworks/g-cloud-8/questions/services/dataProtectionBetweenServices.yml
@@ -17,9 +17,9 @@ options:
     -
         label: 'CPA Foundation VPN Gateway'
     -
-        label: 'VPN using TLS, version 1.2 or later'
+        label: 'TLS (HTTPS or VPN) version 1.2 or later'
     -
-        label: 'VPN using legacy SSL or TLS'
+        label: 'Legacy SSL or TLS (HTTPS or VPN)'
     -
         label: 'No encryption'
 validations:
