--- a/frameworks/g-cloud-8/questions/declaration/employersInsurance.yml
+++ b/frameworks/g-cloud-8/questions/declaration/employersInsurance.yml
@@ -3,7 +3,7 @@ question: |
   £5 million?
 hint: |
   Employer’s liability insurance is a legal requirement except for businesses employing only the owner or close 
-  family members. You must answer 'Yes' or 'Not applicable' to be eligible for consideration for the G-Cloud framework.
+  family members. You must answer ‘Yes’ or ‘Not applicable’ to be eligible for consideration for the G-Cloud framework.
 type: radios
 options:
   -
