--- a/frameworks/g-cloud-8/questions/declaration/proofOfClaims.yml
+++ b/frameworks/g-cloud-8/questions/declaration/proofOfClaims.yml
@@ -1,2 +1,2 @@
-question: Are you prepared to provide proof of any claims made about the services you're submitting to G-Cloud 8?
+question: Are you prepared to provide proof of any claims made about the services you’re submitting to G-Cloud 8?
 type: boolean
