--- a/frameworks/g-cloud-8/questions/declaration/skillsAndResources.yml
+++ b/frameworks/g-cloud-8/questions/declaration/skillsAndResources.yml
@@ -1,2 +1,2 @@
-question: Does your organisation have the skills and resources to provide the services you're submitting for G-Cloud 8?
+question: Does your organisation have the skills and resources to provide the services you’re submitting for G-Cloud 8?
 type: boolean
