--- a/frameworks/g-cloud-8/questions/declaration/terrorism.yml
+++ b/frameworks/g-cloud-8/questions/declaration/terrorism.yml
@@ -5,4 +5,4 @@ question: |
   - section 41 of the Counter Terrorism Act 2008
   - schedule 2 of the Counter Terrorism Act 2008 where the court has determined that there is a terrorist connection
 type: boolean
-hint: Answer 'yes' if anyone who represents your organisation or partner organisation has been convicted of any of the above.
+hint: Answer ‘yes’ if anyone who represents your organisation or partner organisation has been convicted of any of the above.
