--- a/frameworks/g-cloud-8/questions/services/dataProtectionWithinService.yml
+++ b/frameworks/g-cloud-8/questions/services/dataProtectionWithinService.yml
@@ -15,7 +15,7 @@ options:
     -
         label: 'Legacy SSL or TLS (HTTPS or VPN)'
     -
-        label: VLAN
+        label: 'VLAN'
     -
         label: 'Bonded fibre optic connections'
     -
