--- a/frameworks/g-cloud-8/questions/services/thirdPartyComplianceMonitoring.yml
+++ b/frameworks/g-cloud-8/questions/services/thirdPartyComplianceMonitoring.yml
@@ -1,4 +1,4 @@
-hint: 'Do you manage your third-party suppliers'' compliance with relevant security requirements?'
+hint: 'Do you manage your third-party suppliers’ compliance with relevant security requirements?'
 depends:
   -
     "on": lot
