--- a/frameworks/g-cloud-8/questions/declaration/registeredAddress.yml
+++ b/frameworks/g-cloud-8/questions/declaration/registeredAddress.yml
@@ -1,2 +1,2 @@
-question: What is your organisation's registered office address?
+question: What is your organisation’s registered office address?
 type: text
