--- a/frameworks/g-cloud-8/questions/services/networksConnected.yml
+++ b/frameworks/g-cloud-8/questions/services/networksConnected.yml
@@ -12,7 +12,7 @@ hint: 'Choose all that apply.'
 type: checkboxes
 options:
     -
-        label: Internet
+        label: 'Internet'
     -
         label: 'Public Services Network (PSN)'
     -
@@ -24,7 +24,7 @@ options:
     -
         label: 'Joint Academic Network (JANET)'
     -
-        label: Other
+        label: 'Other'
 validations:
   -
     name: answer_required
