--- a/frameworks/g-cloud-8/questions/services/supportAvailability.yml
+++ b/frameworks/g-cloud-8/questions/services/supportAvailability.yml
@@ -21,5 +21,5 @@ validations:
     message: 'Support availability must be no more than 20 words.'
   -
     name: under_character_limit
-    message: "Support availability must be no more than 200 characters."
+    message: 'Support availability must be no more than 200 characters.'
 question: 'Support availability'
