--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/numberOfSuppliersSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/numberOfSuppliersSpecialists.yml
@@ -2,7 +2,7 @@ name: How many specialists will be evaluated
 id: numberOfSuppliers
 question: How many specialists will be evaluated
 question_advice: |
-  Try not take too many specialists through to the assessment stage.
+  Try not to take too many specialists through to the assessment stage.
   
   You must take the specialists who have the most nice-to-have skills and experience through.
   
