--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/numberOfSuppliersOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/numberOfSuppliersOutcomes.yml
@@ -2,7 +2,7 @@ name: How many suppliers will be evaluated
 id: numberOfSuppliers
 question: How many suppliers will be evaluated
 question_advice: |
-  Try not take too many suppliers through to the assessment stage.
+  Try not to take too many suppliers through to the assessment stage.
   
   You must take the suppliers who have the most nice-to-have skills and experience through.
   
