--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/successCriteriaOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/successCriteriaOutcomes.yml
@@ -1,8 +1,8 @@
-name: Proposed solution criteria
+name: Proposal criteria
 id: successCriteria
-question: Proposed solution evaluation criteria
+question: Proposal evaluation criteria
 question_advice: |
-  When you evaluate shortlisted suppliers on the technical competence of their proposed solution, 
+  When you evaluate shortlisted suppliers on the technical competence of their proposal, 
   you must use the criteria you list here.
   
   If you want to add ‘points’ to the individual proposal criteria, you must include them here, 
@@ -12,12 +12,12 @@ question_advice: |
   
   - The proposed technical solution
   - The proposed approach and methodology
-  - How the approach or solution meets your business or policy goal
+  - How the approach or solution meets your organisation’s policy or goal
   - How the approach or solution meets user needs
   - Estimated timeframes for the work
   - How they’ve identified risks and dependencies and offered approaches to manage them
-  - Team structure and organisational makeup
-  - Value for money of the proposed solution
+  - Team structure
+  - Value for money of the proposal
   
 type: list
 number_of_items: 20
@@ -39,4 +39,4 @@ validations:
     name: under_character_limit
     message: 'Each criterion must be no more than 300 characters.'
 
-empty_message: Choose proposed solution criteria
+empty_message: Choose proposal criteria
