--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/technicalWeightingParticipants.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/technicalWeightingParticipants.yml
@@ -10,7 +10,7 @@ question_advice: |
   
   - essential skills and experience
   - nice-to-have skills and experience
-  - proposed solution
+  - proposal
 hint: 'This can be between 10% and 70%'
 
 depends:
