removed the word 'evaluation'

--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/successCriteriaOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/successCriteriaOutcomes.yml
@@ -1,6 +1,6 @@
 name: Proposal criteria
 id: successCriteria
-question: Proposal evaluation criteria
+question: Proposal criteria
 question_advice: |
   When you evaluate shortlisted suppliers on the technical competence of their proposal, 
   you must use the criteria you list here.
