--- a/frameworks/g-cloud-8/messages/homepage-sidebar.yml
+++ b/frameworks/g-cloud-8/messages/homepage-sidebar.yml
@@ -1,27 +1,18 @@
+coming:
+  heading: 'G-Cloud 8 coming soon'
+  messages:
+    - 'Provide cloud software and support to the public sector.'
+    - 'You need an account to receive notifications about when you can apply.'
+
 pending:
-  template_name: 'temporary-message'
   heading: 'G‑Cloud 8 is closed for applications'
   messages:
     - 'Applications are being reviewed.'
     - 'G‑Cloud 8 services will be available from 1 August 2016.'
 
 open:
-  template_name: 'framework-notice'
-  heading: 'Become a G-Cloud 8 supplier'
-  subheading: |
-    Deadline: 5pm BST, 21 June 2016
-          
-    *[BST]: British Summer Time
-  message: |
-    **G-Cloud 8 is open for applications.**
-
-    You can apply to provide:
-
-      - Software as a Service
-      - Platform as a Service
-      - Infrastructure as a Service
-      - Specialist Cloud Services
-
-    [Create an account](/suppliers/create) or [log in](/suppliers/login) to apply.
-
-    [Find out how to apply](https://www.gov.uk/guidance/g-cloud-suppliers-guide)
+  heading: 'G-Cloud 8 open for applications'
+  messages:
+    - 'Provide cloud software and support to the public sector'
+    - 'You need an account to apply.'
+    - 'The application deadline is 5pm BST, 21 June 2016.'
