Change 'percentage' questions to 'number' type
Adds unit, unit_in_full and unit_positition fields to make sure
percentage fields are rendered correctly. Since we're keeping the
existing percentage defaults for min and max value (0 and 100),
there's no need to add limits to the questions that didn't define
them right now.

--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/culturalWeightingSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/culturalWeightingSpecialists.yml
@@ -10,7 +10,10 @@ depends:
     being:
       - digital-specialists
 
-type: percentage
+type: number
+unit: "%"
+unit_in_full: "percent"
+unit_position: "after"
 limits:
   min_value: 5
   max_value: 20
