--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/priceWeightingParticipants.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/priceWeightingParticipants.yml
@@ -8,7 +8,10 @@ depends:
     being:
       - user-research-participants
 
-type: percentage
+type: number
+unit: "%"
+unit_in_full: "percent"
+unit_position: "after"
 limits:
   min_value: 20
   max_value: 80
