--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/priceWeightingSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/priceWeightingSpecialists.yml
@@ -7,7 +7,10 @@ depends:
     being:
       - digital-specialists
 
-type: percentage
+type: number
+unit: "%"
+unit_in_full: "percent"
+unit_position: "after"
 limits:
   min_value: 20
   max_value: 85
