--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/technicalWeightingOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/technicalWeightingOutcomes.yml
@@ -17,7 +17,10 @@ depends:
     being:
       - digital-outcomes
 
-type: percentage
+type: number
+unit: "%"
+unit_in_full: "percent"
+unit_position: "after"
 limits:
   min_value: 10
   max_value: 75
