--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/technicalWeightingSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/technicalWeightingSpecialists.yml
@@ -13,7 +13,10 @@ depends:
     being:
       - digital-specialists
 
-type: percentage
+type: number
+unit: "%"
+unit_in_full: "percent"
+unit_position: "after"
 limits:
   min_value: 10
   max_value: 75
