--- a/frameworks/g-cloud-7/questions/services/serviceAvailabilityPercentage.yml
+++ b/frameworks/g-cloud-7/questions/services/serviceAvailabilityPercentage.yml
@@ -10,7 +10,10 @@ depends:
       - IaaS
       - iaas
 assuranceApproach: 3answers-type1
-type: percentage
+type: number
+unit: "%"
+unit_in_full: "percent"
+unit_position: "after"
 validations:
   -
     name: answer_required
