Make registered address a multiqueston
We want to split the registered address question over three fields, and using a multiquestion is a way to do this.

--- a/frameworks/g-cloud-8/questions/declaration/registeredAddress.yml
+++ b/frameworks/g-cloud-8/questions/declaration/registeredAddress.yml
@@ -1,2 +1,8 @@
+name: Registered address
 question: What is your organisation’s registered office address?
-type: text
+optional: false
+type: multiquestion
+questions:
+  - registeredAddressBuilding
+  - registeredAddressTown
+  - registeredAddressPostcode
