--- a/frameworks/g-cloud-8/messages/homepage-sidebar.yml
+++ b/frameworks/g-cloud-8/messages/homepage-sidebar.yml
@@ -13,6 +13,6 @@ pending:
 open:
   heading: 'G-Cloud 8 open for applications'
   messages:
-    - 'Provide cloud software and support to the public sector'
+    - 'Provide cloud software and support to the public sector.'
     - 'You need an account to apply.'
     - 'The application deadline is 5pm BST, 21 June 2016.'
