--- a/frameworks/digital-outcomes-and-specialists/messages/dates.yml
+++ b/frameworks/digital-outcomes-and-specialists/messages/dates.yml
@@ -1,14 +1,9 @@
-clarifications_close_date: |
-  5pm GMT, 6 January 2016
+clarifications_close_date: '5pm GMT, 6 January 2016'
 
-  *[GMT]: Greenwich Mean Time
-clarifications_publish_date: |
-  5pm GMT, 13 January 2016
+clarifications_publish_date: '5pm GMT, 13 January 2016'
 
-  *[GMT]: Greenwich Mean Time
-framework_close_date: |
-  3pm GMT, 19 January 2016
+framework_close_date: '3pm GMT, 19 January 2016'
 
-  *[GMT]: Greenwich Mean Time
 intention_to_award_date: '18 February 2016'
+
 framework_live_date: ""
