Add guidance on only asking for a single specialist

--- a/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
@@ -3,7 +3,9 @@
   editable: True
   step: 1
   questions:
-    - title
+    - titleSpecialists
+    - titleOutcomes
+    - titleParticipants
 -
   name: Specialist role
   editable: True
