--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/titleOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/titleOutcomes.yml
@@ -1,3 +1,4 @@
+id: title
 name: Title
 question: What you want to call your requirements
 question_advice: This will help you refer to your requirements when talking to suppliers.
@@ -7,8 +8,6 @@ depends:
   - "on": "lot"
     being:
       - digital-outcomes
-      - digital-specialists
-      - user-research-participants
 validations:
   -
     name: answer_required
