Add DUNs number
adding DUNs number question

--- a/frameworks/g-cloud-8/manifests/declaration.yml
+++ b/frameworks/g-cloud-8/manifests/declaration.yml
@@ -102,6 +102,7 @@
     - firstRegistered
     - currentRegisteredCountry
     - companyRegistrationNumber
+    - dunsNumber
     - registeredVATNumber
     - establishedInTheUK
     - appropriateTradeRegisters
