combines titleOutcomes and titleParticipants to titleOutcomesParticipants

--- a/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
@@ -4,8 +4,7 @@
   step: 1
   questions:
     - titleSpecialists
-    - titleOutcomes
-    - titleParticipants
+    - titleOutcomesParticipants
 -
   name: Specialist role
   editable: True
