--- a/frameworks/g-cloud-8/questions/services/dataProtectionBetweenUserAndService.yml
+++ b/frameworks/g-cloud-8/questions/services/dataProtectionBetweenUserAndService.yml
@@ -13,9 +13,9 @@ assuranceApproach: 4answers-type1
 type: checkboxes
 options:
     -
-        label: 'Encrypted PSN service'
+        label: 'PSN assured service'
     -
-        label: 'PSN service'
+        label: 'PSN protected service'
     -
         label: 'CPA Foundation VPN Gateway'
     -
