Adding Microsoft Edge as an option
Adding the latest Microsoft browser

--- a/frameworks/g-cloud-8/questions/services/supportedBrowsers.yml
+++ b/frameworks/g-cloud-8/questions/services/supportedBrowsers.yml
@@ -22,6 +22,8 @@ options:
     -
         label: 'Internet Explorer 10+'
     -
+        label: 'Microsoft Edge'
+    -
         label: Firefox
     -
         label: Chrome
