content update to explain technical competence relationship

--- a/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
@@ -131,7 +131,7 @@
 
     To find the most suitable supplier, you must evaluate your shortlist on:
 
-    - technical competence, eg how well the supplier’s skills or proposal meet your needs
+    - technical competence, using essential skills and experience, nice-to-have skills and experience, and their proposal
     - ‘cultural fit’, eg how the supplier will work in your organisation
     - the price of the proposal
   questions:
@@ -152,7 +152,7 @@
 
     To find the most suitable supplier, you must evaluate your shortlist on:
 
-    - technical competence, eg how well the supplier’s skills or proposal meet your needs
+    - technical competence, using the specialists’ essential skills and experience, and nice-to-have skills and experience
     - ‘cultural fit’, eg how the supplier will work in your organisation
   questions:
     - weightingSpecialists
@@ -170,7 +170,7 @@
 
     To find the most suitable supplier, you must evaluate your shortlist on:
 
-    - technical competence, eg how well the supplier’s skills or proposal meet your needs
+    - technical competence, using essential skills and experience, nice-to-have skills and experience, and their proposal
     - availability, eg whether the supplier can recruit user research participants when you need them
     - the price of the proposal
   questions:
