--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/successCriteriaParticipants.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/successCriteriaParticipants.yml
@@ -1,6 +1,6 @@
-name: Proposal criteria
+name: Technical competence: proposal criteria
 id: successCriteria
-question: Proposal criteria
+question: Technical competence: proposal criteria
 question_advice: |
   When you evaluate shortlisted suppliers on the technical competence of their proposal, 
   you must use the criteria you list here.
@@ -15,7 +15,7 @@ question_advice: |
   - How the approach or solution meets user needs
   - Estimated timeframes for the work
   - How they’ve identified risks and dependencies and offered approaches to manage them
-  
+
 type: list
 number_of_items: 20
 depends:
