--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/niceToHaveRequirementsOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/niceToHaveRequirementsOutcomes.yml
@@ -1,6 +1,6 @@
-name: Nice-to-have skills and experience
+name: 'Technical competence: nice-to-have skills and experience'
 id: niceToHaveRequirements
-question: Nice-to-have skills and experience
+question: 'Technical competence: nice-to-have skills and experience'
 question_advice: |
   To find the best supplier to meet your needs, you should:
 
@@ -10,12 +10,14 @@ question_advice: |
   If too many suppliers have all the essential skills and experience, you’ll use the nice-to-have skills and
   experience to exclude suppliers.
 
+  You’ll need to use the skills and experience you list here to evaluate suppliers’ technical competence.
+
   You must tell suppliers if you want to score individual criteria.
 
   [Read more about how to set evaluation criteria](https://www.gov.uk/guidance/how-to-set-your-evaluation-criteria-when-buying-digital-outcomes-and-specialists-services#giving-points-to-individual-criteria)
 
   List the skills and experience you’d like the supplier to have, eg:
-
+  
   - provide evidence of delivering at scale
   - start work 2 to 4 weeks before the latest start date
 
