--- a/frameworks/digital-outcomes-and-specialists/manifests/display_brief.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/display_brief.yml
@@ -48,7 +48,7 @@
     - additionalTerms
 -
   name: Skills and experience
-  summary_page_description: Buyers will use the essential and nice-to-have skills and experience to help them evaluate suppliers.
+  summary_page_description: Buyers will use the essential and nice-to-have skills and experience to help them evaluate suppliers’ technical competence.
   questions:
     - essentialRequirementsOutcomes
     - essentialRequirementsSpecialists
