--- a/frameworks/g-cloud-8/questions/declaration/dunsNumber.yml
+++ b/frameworks/g-cloud-8/questions/declaration/dunsNumber.yml
@@ -1,3 +1,3 @@
-question: What is your organisation’s DUNs number?
+question: What is your organisation’s DUNS number?
 type: text
 hint: PLACEHOLDER - waiting to agree final copy.
