adds a quates around technical competence: proposal...

--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/successCriteriaParticipants.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/successCriteriaParticipants.yml
@@ -1,6 +1,6 @@
-name: Technical competence: proposal criteria
+name: 'Technical competence: proposal criteria'
 id: successCriteria
-question: Technical competence: proposal criteria
+question: 'Technical competence: proposal criteria'
 question_advice: |
   When you evaluate shortlisted suppliers on the technical competence of their proposal, 
   you must use the criteria you list here.
