--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/titleOutcomesParticipants.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/titleOutcomesParticipants.yml
@@ -8,6 +8,7 @@ depends:
   - "on": "lot"
     being:
       - digital-outcomes
+      - user-research-participants
 validations:
   -
     name: answer_required
