changes proposed solution to proposal criteria

--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/successCriteriaOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/successCriteriaOutcomes.yml
@@ -1,6 +1,6 @@
-name: 'Technical comptence: proposed solution criteria'
+name: 'Technical competence: proposal criteria'
 id: successCriteria
-question: 'Technical comptence: proposed solution evaluation criteria'
+question: 'Technical competence: proposal evaluation criteria'
 question_advice: |
   When you evaluate shortlisted suppliers on the technical competence of their proposal, 
   you must use the criteria you list here.
