Add missing BST to time

--- a/frameworks/g-cloud-8/manifests/declaration.yml
+++ b/frameworks/g-cloud-8/manifests/declaration.yml
@@ -3,7 +3,7 @@
   editable: True
   description: |
     You must make this declaration to apply to G-Cloud 8. You can come back and change your answers at any time before
-    5pm, 21 June 2016.
+    5pm BST, 21 June 2016.
     
     You must be able to truthfully answer ‘yes’ to every question under ‘Essentials’
     for your bid to be considered eligible. If you can’t answer ‘yes’ to every
