--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/successCriteriaParticipants.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/successCriteriaParticipants.yml
@@ -1,12 +1,8 @@
-name: 'Technical competence: proposal criteria'
+name: 'Proposal criteria'
 id: successCriteria
-question: 'Technical competence: proposal criteria'
+question: 'Proposal criteria'
 question_advice: |
-  When you evaluate shortlisted suppliers on the technical competence of their proposal, 
-  you must use the criteria you list here.
-  
-  If you want to add ‘points’ to the individual proposal criteria, you must include them here, 
-  eg ‘proposed approach and methodology - 15 points’
+  When you evaluate shortlisted suppliers on the technical competence of their proposal, you must use the criteria you list here.
   
   Suggested criteria
   
