--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/essentialRequirementsSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/essentialRequirementsSpecialists.yml
@@ -1,19 +1,13 @@
-name: 'Technical competence: essential skills and experience'
+name: 'Essential skills and experience'
 id: essentialRequirements
-question: 'Technical competence: essential skills and experience'
+question: 'Essential skills and experience'
 question_advice: |
-  Specialists who don’t meet all the essential skills and experience you list here will be automatically notified that their application was unsuccessful.
-
-  You'll need to use all the essential skills and experience to evaluate suppliers’ technical competence.
-  
-  You must tell suppliers if you want to score individual criteria.
-  
-  [Read more about how to set evaluation criteria.](https://www.gov.uk/guidance/how-to-set-your-evaluation-criteria-when-buying-digital-outcomes-and-specialists-services#giving-points-to-individual-criteria)
+  Suppliers who don’t have all the essential skills you list here will be automatically notified that their application was unsuccessful.
 
   List all the specific skills or experience the specialist must have, 
   eg have experience designing services for users with low digital literacy.
 
-  **The supplier must:**
+  **The specialist must:**
 
 list_item_name: 'essential requirement'
 number_of_items: 20
